DAYTW-24 Update html files for new viewer and icon name.
# Conflicts:
#	indra/newview/skins/default/html/da/loading/loading.html
#	indra/newview/skins/default/html/de/loading/loading.html
#	indra/newview/skins/default/html/es/loading/loading.html
#	indra/newview/skins/default/html/fr/loading/loading.html
#	indra/newview/skins/default/html/hu/loading/loading.html
#	indra/newview/skins/default/html/it/loading/loading.html
#	indra/newview/skins/default/html/ja/loading/loading.html
#	indra/newview/skins/default/html/nl/loading/loading.html
#	indra/newview/skins/default/html/pt/loading/loading.html
#	indra/newview/skins/default/html/ru/loading/loading.html
#	indra/newview/skins/default/html/uk/loading/loading.html
#	indra/newview/skins/default/html/zh/loading/loading.html

--- a/indra/newview/skins/default/html/en-us/loading-error/index.html
+++ b/indra/newview/skins/default/html/en-us/loading-error/index.html
@@ -19,7 +19,7 @@ a:hover {color:#ff7900;text-decoration:underline;}
 <div id="infobox">
 	<img src="../../unabletoconnect.png"><br/>
 		<p>
-			Second Life can't establish a connection to the login server.
+			Dayturn can't establish a connection to the login server.
 		</p>
 		<p>
 			Please check your internet connection. If your computer or network is protected by a firewall or proxy, make sure that Second Life is permitted to access the network.
