--- a/indra/newview/skins/default/html/es/loading-error/index.html
+++ b/indra/newview/skins/default/html/es/loading-error/index.html
@@ -16,7 +16,7 @@ a:hover {color:#ff7900;text-decoration:underline;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body> <div id="infobox"> <img src="../../unabletoconnect.png"><br/>
-		<p> Second Life no puede establecer una conexión con el servidor de inicio de sesión.
+		<p> Dayturn no puede establecer una conexión con el servidor de inicio de sesión.
 		</p>
 		<p> Compruebe la conexión a Internet. Si su computadora o red están protegidas con un firewall o proxy, asegúrese de permitirle el acceso a Second Life a la red.
 		</p> <div id="submitbtn">
