--- a/indra/newview/skins/default/html/pt/loading-error/index.html
+++ b/indra/newview/skins/default/html/pt/loading-error/index.html
@@ -16,7 +16,7 @@ a:hover {color:#ff7900;text-decoration:underline;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body> <div id="infobox"> <img src="../../unabletoconnect.png"><br/>
-		<p> O Second Life não consegue estabelecer uma conexão com o servidor de login.
+		<p> O Dayturn não consegue estabelecer uma conexão com o servidor de login.
 		</p>
 		<p> Verifique a sua conexão com a Internet. Se o seu computador ou sua rede estiverem protegidos por um firewall ou um proxy, verifique se o Second Life tem permissão de acesso na rede.
 		</p> <div id="submitbtn">
