--- a/indra/newview/skins/default/html/zh/loading-error/index.html
+++ b/indra/newview/skins/default/html/zh/loading-error/index.html
@@ -16,7 +16,7 @@ a:hover {color:#ff7900;text-decoration:underline;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body> <div id="infobox"> <img src="../../unabletoconnect.png"><br/>
-		<p> Second Life无法与登录服务器连接。
+		<p> Dayturn无法与登录服务器连接。
 		</p>
 		<p> 请检查您的因特网连接 如果您的计算机或网络由防火墙或代理器保护，请确认Second Life能在该网络里访问因特网。
 		</p> <div id="submitbtn">
