--- a/indra/newview/skins/default/html/fr/loading-error/index.html
+++ b/indra/newview/skins/default/html/fr/loading-error/index.html
@@ -16,7 +16,7 @@ a:hover {color:#ff7900;text-decoration:underline;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body> <div id="infobox"> <img src="../../unabletoconnect.png"><br/>
-		<p> Second Life ne peut pas établir de connexion avec le serveur.
+		<p> Dayturn ne peut pas établir de connexion avec le serveur.
 		</p>
 		<p> Vérifiez votre connexion Internet. Si votre ordinateur ou votre réseau est protégé par un.pare-feu ou un proxy, assurez-vous que Second Life a l'autorisation d'accéder au réseau.
 		</p> <div id="submitbtn">
