--- a/indra/newview/skins/default/html/ja/loading-error/index.html
+++ b/indra/newview/skins/default/html/ja/loading-error/index.html
@@ -16,7 +16,7 @@ a:hover {color:#ff7900;text-decoration:underline;}
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body> <div id="infobox"> <img src="../../unabletoconnect.png"><br/>
-		<p> Second Lifeによるログインサーバーへの接続が確立できません。
+		<p> Dayturnによるログインサーバーへの接続が確立できません。
 		</p>
 		<p> インターネット接続を確認してください。 お使いのコンピュータやネットワークがファイヤウォールまたはプロキシにより保護されている場合は、Second  Lifeによるネットワークへのアクセスが許可されていることを確認してください。
 		</p> <div id="submitbtn">
